--- a/Lemuel Portfolio.html
+++ b/Lemuel Portfolio.html
@@ -1,53 +1,121 @@
 <!DOCTYPE html>
-<!-- HTML5 Hello world by kirupa - http://www.kirupa.com/html5/getting_your_feet_wet_html5_pg1.htm -->
+<!--This is my first ever Front-End Web Dev Project. Started on 9/12. Complted 9/14-->
 <html lang="en-us">
 <body>
 <head>
   <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Exo">
-  
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 </head>
-
-<nav class="nav navbar">
-<ul class="nav navbar">
-    <li>
-    <a href="#">Lemuel Parker</a>
+  <!------------------------------ Header ------------------------------>
+<div class="container-responsive">
+<ul class="nav navbar-fixed-top nav-tabs">
+  <li class="pull-left">
+    <a href="#me">Lemuel Parker</a>
   </li>
-  <li class="pull-right">
+  <li class=pull-right>
     <a href="#">Follow Me</a>
   </li>
   <li class="pull-right">
-    <a href="#">Contact Me</a>
+    <a href="#contact">Contact Me</a>
   </li>
   <li class="pull-right">
     <a href="#">Portfolio</a>
   </li>
 </ul>
-</nav>
-<div class="pageOne">
+<!------------------------------ Section 1 ------------------------------>
+<div class="pageOne" id="contact">
   <div class="jumbotron text-center">
   <h1>Lemuel G. Parker</h1>
   <h3>Persuing My Visions, Making Yours Reality</h3>
   </div>
   <div class="btnlist text-center">
-    <a class="btn btn-default" href="#">LinkedIn</a>
-    <a class="btn btn-default" href="#">GitHub</a>
-    <a class="btn btn-default" href="#">Twitter</a>
-    <a class="btn btn-default" href="#">Facebook</a>
-    <a class="btn btn-default" href="#">Instagram</a>
+    <a class="btn btn-default" href="https://www.linkedin.com" target="_blank">LinkedIn</a>
+    <a class="btn btn-default" href="https://www.github.com" target="_blank">GitHub</a>
+    <a class="btn btn-default" href="https://www.twitter.com" target="_blank">Twitter</a>
+    <a class="btn btn-default" href="https://www.facebook.com" target="_blank">Facebook</a>
+    <a class="btn btn-default" href="https://www.instagram.com/?hl=en" target="_blank">Instagram</a>
   </div>
 </div>
-<div class="pageTwo">
+<!-------------------ABOUT ME DIVIDER----------------->
+<div class="divider">
+  <div class="display-middle"><span lass="text-center">ABOUT ME</span>
+  </div>
+</div>
+<!------------------------------ Section 2------------------------------>
+<div class="pageTwo" id="me">
   <div class="row">
-    <div class="col-md-6 text-center">
+    <div class="col-xs-6">
       <h1>Lorem Ipsum</h1>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur sit amet rhoncus metus, eget molestie massa. Duis eu augue leo. Proin metus massa, pellentesque et tristique ut, auctor sed metus. Proin nec pulvinar neque. Aliquam at nunc vel urna rhoncus cursus vitae et tellus. Donec dignissim consectetur lorem, quis tempus dui fermentum vel.</p>
     </div>
-    <div class="col-md-6">
+    <div class="col-xs-6 col-sm-4">
       <img src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/AAEAAQAAAAAAAAk2AAAAJGM3NTE2ZGVhLWEzYTAtNDQ2NS1hNTZlLTZmNzJhOGM4NTg1Ng.jpg" class="img-responsive myPhoto img-circle"/>
     </div>
   </div>
+</div>
+ <!------------------PORTFOLIO DIVIDER------------------>
+<div class="divider">
+  <div class="display-middle"><span lass="text-center">Portfolio</span>
+  </div>
+</div>
+<!------------------------------ Section 3 ------------------------------>
+<div class="pageThree">
+   <div class="container">
+      
+    <div class="row">
+      <div class="col-md-6">
+            <a href="http://s.codepen.io/pikazard98/debug/eZMvvw" target="_blank">
+              <img  class="img-responsive img-rounded" width="300" height="300" src="http://oi65.tinypic.com/5kr1qr.jpg" title="groot tribute page" /></a>
+      </div>
+        <div class="col-md-6">
+            <a href="http://s.codepen.io/pikazard98/debug/bpjexd" target="_blank">
+              <img  class="img-responsive img-rounded" width="300" height="300"src="http://i64.tinypic.com/ix5bmf.jpg" title="wikipedia viewer" /></a>
+        </div>
+    </div>
+      
+     <div class="row">
+         <div class="col-md-6">
+            <a href="http://s.codepen.io/pikazard98/debug/eZMvvw" target="_blank">
+              <img class="img-responsive img-rounded" width="300" height="300"src="http://oi65.tinypic.com/5kr1qr.jpg" title="groot tribute page" /></a>
+          </div>
+          <div class="col-md-6">
+            <a href="http://s.codepen.io/pikazard98/debug/bpjexd" target="_blank">
+              <img class="img-responsive img rounded" width="300" height="300"src="http://i64.tinypic.com/ix5bmf.jpg" title="wikipedia viewer" /></a>
+          </div>
+      </div>
+    </div>
+  </div>
+  
+<!-------------------------CONTACT DIVIDER---------------------->
+  <div class="divider">
+    <div class="display-middle"><span lass="text-center">CONTACT</span>
+  </div>
+</div>
+<!---------------------------------PageFour---------------------->
+
+<div class="pageFour">
+  <div class="Container text-center" style="padding-top:20%;">
+  <form>
+    <div class="form-group">
+      <label for="fname">Name:</label>
+      <input type="fname" class="form-control" id="email" placeholder="Enter Name">
+    </div>
+    <div class="form-group">
+      <label for="email">Email:</label>
+      <input type="email" class="form-control" id="pwd" placeholder="Enter Email">
+    </div>
+    <div class="from-group">
+      <label for="text">Comment:</label>
+        <textarea type="textarea" rows="8" class="form-control" placeholder="Leave Us A Message"></textarea>
+        <br>
+          <button type="submit" class="btn btn-default">Submit</button>
+    </div>
+    </div>
+  </form>
+  </div>
+</div>
+
 </div>
 	
 </body>
