rounded portfolio image. Pointed to tribute page

--- a/Lemuel Portfolio.html
+++ b/Lemuel Portfolio.html
@@ -65,23 +65,23 @@
       
     <div class="row">
       <div class="col-md-6">
-            <a href="http://s.codepen.io/pikazard98/debug/eZMvvw" target="_blank">
-              <img  class="img-responsive img-circle" width="300" height="300" src="http://oi65.tinypic.com/5kr1qr.jpg" title="groot tribute page" /></a>
+            <a href="http://codepen.io/lgparker101/full/qabmOr/" target="_blank">
+              <img  class="img-responsive img-circle" width="200" height="200" src="http://www.breguet.com/sites/default/files/chronologie/alexandre_dumas-_0.jpg" title="Alexandre tribute page" /></a>
       </div>
         <div class="col-md-6">
-            <a href="http://s.codepen.io/pikazard98/debug/bpjexd" target="_blank">
-              <img  class="img-responsive img-circle" width="300" height="300"src="http://i64.tinypic.com/ix5bmf.jpg" title="wikipedia viewer" /></a>
+            <a href="http://codepen.io/lgparker101/full/qabmOr/" target="_blank">
+              <img  class="img-responsive img-circle" width="200" height="200" src="http://www.breguet.com/sites/default/files/chronologie/alexandre_dumas-_0.jpg" title="Alexandre tribute page" /></a>
         </div>
     </div>
       
      <div class="row">
          <div class="col-md-6">
-            <a href="http://s.codepen.io/pikazard98/debug/eZMvvw" target="_blank">
-              <img class="img-responsive img-circle" width="300" height="300"src="http://oi65.tinypic.com/5kr1qr.jpg" title="groot tribute page" /></a>
+            <a href="http://codepen.io/lgparker101/full/qabmOr/" target="_blank">
+              <img class="img-responsive img-circle" width="200" height="200" src="http://www.breguet.com/sites/default/files/chronologie/alexandre_dumas-_0.jpg" title="Alexandre tribute page" /></a>
           </div>
           <div class="col-md-6">
-            <a href="http://s.codepen.io/pikazard98/debug/bpjexd" target="_blank">
-              <img class="img-responsive img-circle" width="300" height="300"src="http://i64.tinypic.com/ix5bmf.jpg" title="wikipedia viewer" /></a>
+            <a href="http://codepen.io/lgparker101/full/qabmOr/" target="_blank">
+              <img class="img-responsive img-circle" width="200" height="200" src="http://www.breguet.com/sites/default/files/chronologie/alexandre_dumas-_0.jpg" title="Alexandre tribute page" /></a>
           </div>
       </div>
     </div>
